<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:background="@drawable/rectangle_40"
        android:contentDescription="@string/todo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="45dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="29dp"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_41"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:layout_width="68dp"
        android:layout_height="49dp"
        android:text="@string/voting2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:text="@string/explore_the_voting2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_great_because_you_can_give_a_voting"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/your_e_mail"
        android:inputType="text"
        android:paddingStart="18dp"
        android:textColorHint="@color/hintColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.24"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="320dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="18dp"
        android:textColorHint="@color/hintColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="323dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/userName"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="323dp"
        android:layout_height="58dp"
        android:background="@drawable/edit_text_shape"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/kurale"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/userName"
        app:layout_constraintVertical_bias="0.593"
        tools:ignore="Autofill,RtlSymmetry" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kurale"
        android:text="@string/sign_up2"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.175" />


    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/kurale"
        android:text="@string/do_you_forget_your_password2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/kurale"
        android:text="@string/sign_in2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/design_default_color_error"
        android:fontFamily="@font/kurale"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.859" />


</androidx.constraintlayout.widget.ConstraintLayout>